# mysql-tester

./: .gitignore  BUILD.bazel  CONTRIBUTING.md  DEPS.bzl  Makefile  README.md  WORKSPACE  build.sh  config.toml  embed.go  go.mod  go.sum
.github/workflows/: ci.yml
generate_perror/: main.go
include/: hello.inc
r/: create_database.result  create_table.result  delete.result  drop_database.result  drop_table.result  example.result  explain.test  extensions.result  insert.result  multi_query.result  select.result  show.result  source.result  update.result
src/: BUILD.bazel  color.go  error_with_diff_result.go  main.go  perror.go  query.go  query_test.go  tester.go  type.go  util.go  util_test.go  xml.go
src/vitess-tester/: main.go  query_test.go  reporter.go  tester.go  type.go
t/: basic.test  basic_select.test  br_integration.test  cdc_integration.test  create_database.test  create_table.test  delete.test  disaggregated_tiflash.test  disaggregated_tiflash_partition_table.test  disaggregated_tiflash_partition_table_static.test  drop_database.test  example.test  explain.test  extensions.test  insert.test  multi_query.test  select.test  show.test  source.test  tpcc.test  tpch.test  tpch_vschema.json  update.test
testcase/extra/: sakila-data.sql  sakila-queries.sql
testcase/r/: alias2.result  delete.result  delete2.result  example.result  group_by.result  having.result  having2.result  insert_select.result  insert_tester.result  insert_update.result  join.result  join2.result  order_by.result  partition.result  partition2.result  sakila.result  select_all.result  (+4 more)
(+47 files in other folders)
