load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "src_lib",
    srcs = [
        "main.go",
        "query.go",
        "type.go",
        "util.go",
        "xml.go",
    ],
    importpath = "github.com/pingcap/mysql_tester/src",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_go_sql_driver_mysql//:go_default_library",
        "@com_github_pingcap_errors//:go_default_library",
        "@com_github_pingcap_tidb_parser//:go_default_library",
        "@com_github_pingcap_tidb_parser//ast:go_default_library",
        "@com_github_pingcap_tidb_parser//charset:go_default_library",
        "@com_github_pingcap_tidb_parser//terror:go_default_library",
        "@com_github_pingcap_tidb_parser//test_driver:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_binary(
    name = "mysql_tester",
    embed = [":src_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "src_test",
    srcs = ["query_test.go"],
    embed = [":src_lib"],
)
